Fixed some bugs and added some improvements following the meeting with the Mintt board

--- a/README
+++ b/README
@@ -1,3 +1,47 @@
 User registration => User application : OK!
 User application mail => Copie Rosina et Mehdi : OK pour Mehdi
 Archivage des messages : OK
+
+Google analytics
+
+
+
+
+Bug/Typo/Style Fix: Général:
+OK • Dans Course information, ajouter Number of modules (avec lien vers les modules)
+OK • Localiser la date
+
+Home:
+OK • Potential assessment -> assessment of the potential • Dans “Content”, ajouter un lien vers les modules
+OK • “till April 16, 2010” -> “till end of April 2010”
+
+Modules:
+OK • Enlever Module 2 et mettre à jour les numéros des modules
+OK • Les liens vers les biographies doivent pointer sur les biographie en anglais
+
+Application:
+OK • Faculty -> School (“Faculté”)
+OK • Ajouter Lab (required)
+• Mettre les dates vides par défaut
+• [Design] Textarea 2 fois moins haut
+OK • Changer le texte du flash après application par “Thanks for your submission. For security purpose ...”
+OK • User.confirmation_link : “confirm my account” -> “confirm my application”
+
+Contact:
+OK • Please -> please
+
+Users Admin:
+OK • Nom, School, Supervisor, Email
+OK • User edit: “Comment” -> “SRI Comment”
+OK • Nom Prénom plutôt que Prénom Nom
+• Demander confirmation lors de l’update d’un user (avec nom/prénom dans le pop-up)
+
+New features:
+• [Design] Changer l’affichage des flash, mettre un bandeau plus visible
+• [Design] Liens SRI et CDM en vert
+• [Design] Contour des boutons du menu en vert ?
+• Trash des users (deleted_at)
+• Trash box: cacher la poubelle pour le moment
+• HTTPS pour login ?
+• Export CSV de la listes des candidates
+• All dans la liste des candidates
