--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -16,7 +16,7 @@ en:
       updated: 'Your password was changed successfully. You are now signed in.'
     confirmations:
       link: "Didn't receive confirmation instructions?"
-      send_instructions: 'You will receive an email with instructions about how to confirm your application in a few minutes.'
+      send_instructions: 'Thanks for your submission. For security purpose you will receive an email with instructions about how to confirm your application in a few minutes.'
       confirmed: 'Your account was successfully confirmed. You are now signed in.'
     registrations:
       link: 'Sign up'
