SMTP config (not working) CSV separator is now ';' New helpers for displaying dates Adding count of objects in admin/messages/trashs Adding application date in user show page

--- a/TODO
+++ b/TODO
@@ -34,9 +34,11 @@ OK • [Remy] Export CSV de la listes des candidates
 OK • [Remy] All dans la liste des candidates
 OK • [Octave] Changer l’affichage des flash, mettre un bandeau plus visible
 OK • [Octave] Liens SRI et CDM en vert
-• [Octave] HTTPS pour login ?
+• [Octave] HTTPS ?
 • [Octave] Contour des boutons du menu en vert ?
 • [Octave] Rediriger mintt.ch vers mintt.epfl.ch
 • [Octave] Google analytics
 • [Octave] Mettre photo de Philippe Eyries
+• [Octave] CSS pour le print
+• [Octave] Styliser "Application date" (fiche user)
 • [Remy] Comma => mettre le charset a ISO-... (pas UTF8 car Excel pete un cable)
