--- a/TODO
+++ b/TODO
@@ -34,11 +34,11 @@ OK • [Remy] Export CSV de la listes des candidates
 OK • [Remy] All dans la liste des candidates
 OK • [Octave] Changer l’affichage des flash, mettre un bandeau plus visible
 OK • [Octave] Liens SRI et CDM en vert
-• [Octave] HTTPS ?
+OK • [Octave] HTTPS ?
 • [Octave] Contour des boutons du menu en vert ?
-• [Octave] Rediriger mintt.ch vers mintt.epfl.ch
-• [Octave] Google analytics
-• [Octave] Mettre photo de Philippe Eyries
-• [Octave] CSS pour le print
-• [Octave] Styliser "Application date" (fiche user)
+OK • [Octave] Rediriger mintt.ch vers mintt.epfl.ch
+OK • [Octave] Google analytics
+OK • [Octave] Mettre photo de Philippe Eyries
+OK • [Octave] CSS pour le print
+OK • [Octave] Styliser "Application date" (fiche user)
 • [Remy] Comma => mettre le charset a ISO-... (pas UTF8 car Excel pete un cable)
