--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,2 @@
 en:
-  new_message_contact:          "[mintt] New contact message"
-  sign_up_instructions_subject: "[mintt] Activate your student account on mintt.epfl.ch"
+  new_contact_message: "[mintt] New contact message"
