--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -2,7 +2,7 @@ en:
   devise:
     registrations:
       applications_closed: "Applications are closed."
-      updated: "You account has been updated."
+      updated: "Your personal information has been updated."
     confirmations:
       link: "Didn't receive confirmation instructions?"
       send_instructions: "Thanks for your submission. For security purpose you will receive an email with instructions about how to confirm your application in a few minutes."
