Passage en revu de toute l'application
  - Refactoring des helpers
  - Ajout du tri sur tous les champs de la liste des documents et des messages.
  - Tri et pagination via AJAX de la liste des documents.
  - Suppression des méthodes custom "trash", "untrash" etc. par juste des "update"
  - Passage des flash dans les redirect_to quand c'est possible
  - Ajout du SSL via Rack
  - Ajout de la navigation par jour du programme (AJAX)
  - Cleaning des routes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,19 @@
+2010-08-25
+  - Passage en revu de toute l'application
+  - Refactoring des helpers
+  - Ajout du tri sur tous les champs de la liste des documents et des messages.
+  - Tri et pagination via AJAX de la liste des documents.
+  - Suppression des méthodes custom "trash", "untrash" etc. par juste des "update"
+  - Passage des flash dans les redirect_to quand c'est possible
+  - Ajout du SSL via Rack
+  - Ajout de la navigation par jour du programme (AJAX)
+  - Cleaning des routes
+  
 2010-08-24
   - Passage à Rails 3.0.0.rc2.
   - Passage à mongoid.
   - Ajout du tri sur tous les champs de la liste des étudiants.
-  - Tri et pagination via AJAX de la liste des étudiants.
+  - Tri et pagination via AJAX de la liste des étudiants et des professeurs.
   - Colonne avec "vu en vert" à intituler ’10.
   - Titre "mintt 2010 Students: # of #".
   - Ajout des champs “Nom du cas traité par l’étudiant”, “Nom du parrain” et “Crédit accordé”, exporté dans l'export CSV.
