--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,10 +2,12 @@ en:
   new_contact_message: "[mintt] New contact message"
   
   time:
+    am: AM
+    pm: PM
     formats:
       filename: "%Y%m%d"
       lite: "%B %d, %Y"
-      full: "%B %d, %Y %H:%M"
+      full: "%Y %b %d, %H:%M"
       long: "%Y-%B-%d - %H:%M"
       time: "%I:%M %p"
       
